package entregas.PinedaOscar.Reto_000.Ejercicio_2;

class Resultados {
    private Frame frame1;
    private Frame frame2;
    
    public Resultados(Frame frame1, Frame frame2) {
        this.frame1 = frame1;
        this.frame2 = frame2;
    }
    
    public void mostrarResultados() {
        System.out.println("Mostrando resultados de los frames...");
    }
}
